# clair-recruitment-task-summer-25

./: README.md
backend/: dev-requirements.txt  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/core/: config.py  dependencies.py
backend/src/db/: base.py  enums.py  session.py  tables.py
backend/src/db/queries/: project.py  utils.py
backend/src/models/: product.py  project.py  utils.py
backend/src/routes/: projects.py
backend/src/services/: __init__.py  factory.py  project_service.py
