[project]
name = "backend"
version = "0.1.0"
description = "Clair recruitment task backend"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["src"]

[tool.black]
target-version = ['py312']
line-length = 100  # Google style

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]
fixable = ["E", "F", "W", "I", "Q"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"